# football_player_analysis

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  claude-task-mini.yaml  claude-task.yaml  pyproject.toml
.claude/skills/: .gitmodules
config/: dimensions.toml  potential.toml  radar.toml  transfermarkt_leagues.toml
docs/: analyst_methods.md  design.md
notebooks/: data_explorer.py
notebooks/__marimo__/session/: data_explorer.py.json
src/football_player_analysis/: __init__.py  cli.py  pipeline.py
src/football_player_analysis/core/: __init__.py  config.py  exceptions.py  matching.py  storage.py
src/football_player_analysis/features/: __init__.py
src/football_player_analysis/features/analyze/: __init__.py  dimensions.py  padj.py  per90.py  percentiles.py  radar.py  radar_axes.py
src/football_player_analysis/features/collect/: __init__.py  base.py  fbref.py  merge.py  transfermarkt.py  understat.py
src/football_player_analysis/features/predict/: __init__.py  potential.py
src/football_player_analysis/features/publish/: __init__.py  substack.py
src/football_player_analysis/features/report/: __init__.py  markdown.py
tests/: conftest.py  test_analyst_methods.py  test_analyze.py  test_collect.py  test_collect_transfermarkt.py  test_collect_understat.py  test_merge.py  test_pipeline.py  test_predict.py  test_report_publish.py
